# cpp-sdk

./: .gitignore  .gitmodules  .pullapprove.yml  CHANGELOG.md  CMakeLists.txt  Doxyfile  README.md  ToolchainARM.cmake
include/: AVConstants.h  AVOSCloud.h
include/ACL/: AVACL.h  AVRole.h
include/AVFile/: AVFile.h  UploaderManager.h
include/AVObject/: AVObject.h  AVRelation.h
include/Geo/: AVGeoPoint.h
include/Query/: AVQuery.h
include/Request/: AVPaasClient.h
include/User/: AVUser.h
include/Utils/: AVErrorUtils.h  AVPlatFormConfig.h  AVPlatformMacros.h  AVStringUtils.h
scripts/: check-cpp-code-style.sh
src/: AVOSCloud.cpp  CMakeLists.txt
src/ACL/: AVACL.cpp  AVRole.cpp  CMakeLists.txt
src/AVFile/: AVFile.cpp  CMakeLists.txt  UploaderManager.cpp
src/AVObject/: AVObject.cpp  AVRelation.cpp  CMakeLists.txt
src/Geo/: AVGeoPoint.cpp  CMakeLists.txt
src/Query/: AVQuery.cpp  CMakeLists.txt
src/Request/: AVPaasClient.cpp  CMakeLists.txt
src/User/: AVUser.cpp  CMakeLists.txt
src/Utils/: AVErrorUtils.cpp  CMakeLists.txt
tests/: AVACLTest.cpp  AVFileTest.cpp  AVGeoPointTest.cpp  AVObjectTest.cpp  AVPaasClientTest.cpp  AVQueryTest.cpp  AVUserTest.cpp  CMakeLists.txt
